<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bitmap_book_read_chapterlist_repeat"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:background="#ff313131"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/title_function_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingLeft="75.0dip"
            android:paddingRight="75.0dip"
            android:singleLine="true"
            android:text="关于"
            android:textColor="#ffffff"
            android:textSize="22sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_about"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textColor="#ff959595"
        android:textSize="17.0sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#ff313131"
        android:gravity="center_vertical"
        android:text=""
        android:textColor="#ff959595" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/tv_about_intro1"
        android:textColor="#ff959595"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/tv_about_intro2"
        android:textColor="#ff959595"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/tv_about_intro3"
        android:textColor="#ff959595"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/tv_about_intro4"
        android:textColor="#ff959595"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/tv_about_intro5"
        android:textColor="#ff959595"
        android:textSize="15sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#ff313131"
        android:gravity="center_vertical"
        android:text=""
        android:textColor="#ff959595" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_copyright"
            android:layout_centerInParent="true"
            android:text="Email:linkun199011@163.com"
            android:textColor="#ff959595"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_allrights"
            android:layout_centerInParent="true"
            android:text="Copyright © 2014-2016 UstcLin"
            android:textColor="#ff959595"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_allrights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="5dp"
            android:text="All Rights Reserved"
            android:textColor="#ff959595"
            android:textSize="10sp" />
    </RelativeLayout>
</LinearLayout>

